fixed homepage look (now covers the whole page - is responsive)

--- a/src/components/pages/Home/Home.css
+++ b/src/components/pages/Home/Home.css
@@ -4,6 +4,10 @@
   background-size: cover;
   background-repeat: no-repeat;
   height: 100%;
+  text-align: center;
+  padding: 7%;
+  min-height: calc(100vh - var(--pad-top));
+  width: 100%;
 }
 .background-red {
   background-color: red;
